--- a/index.html
+++ b/index.html
@@ -4,11 +4,66 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
     <title>Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-<body>
-    
+<body class="main-content">
+    <header class="section sec1 header active" id="main">
+        <div class="header-content">
+            <div class="left-header">
+                <div class="h-shape"></div>
+                <div class="img">
+                    <img src="img/My project.jpg" alt="">
+                </div>
+            </div>
+            <div class="right-header">
+                <h1 class="name">
+                    Hi, Im <span> Rodolfo Brena Cruz</span>
+                    a FrontEnd Web Developer.
+                </h1>
+                <p>
+                    I'm  from Huatulco Oaxaca; I like design and create functional websites with a good UI.
+                    As a FrontEnd Developer, i have experience in creating and maintaining web apps using HTML, CSS & libraries, JavaScript & frameworks.
+                    I have strong analytical, critical thinking, and organizational skills. I am punctual and have excellent communication skills in both written and spoken English.
+                </p>
+                <div class="btn-container">
+                    <a href="" class="main-btn">
+                        <span class="btn-text">Download CV</span>
+                        <span class="btn-icon"><i class="fa-solid fa-download"></i></span>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </header>    
+    <main>
+        <section class="section sec2 about" id="about"></section>
+        <section class="section sec3 portfolio" id="portfolio"></section>
+        <section class="section sec4 blogs" id="blogs"></section>
+        <section class="section sec5 contact" id="contact"></section>
+    </main>
+
+    <div class="controls">
+        <div class="control control-1 active-btn" data-id="main">
+            <i class="fa-solid fa-house"></i>
+        </div>
+        <div class="control control-2" data-id="about">
+            <i class="fa-sharp fa-solid fa-user"></i>
+        </div>
+        <div class="control control-3" data-id="portfolio">
+            <i class="fa-solid fa-briefcase"></i>
+        </div>
+        <div class="control control-4" data-id="blogs">
+            <i class="fa-sharp fa-solid fa-newspaper"></i>
+        </div>
+        <div class="control control-5" data-id="contact">
+            <i class="fa-sharp fa-solid fa-envelope"></i>
+        </div>
+    </div>
+    <script src="function.js"></script>
 </body>
-<script src="function.js"></script>
+
 </html>
